--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,8 +8,8 @@
 <channel>
 	<title>
 	Comments for Sajjad Raza	</title>
-	<atom:link href="https://sajjadraza705.github.io/raza/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://sajjadraza705.github.io/raza/</link>
+	<atom:link href="https://sajjadraza786.netlify.app/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://sajjadraza786.netlify.app/</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Fri, 09 Oct 2020 13:35:28 +0000</lastBuildDate>
 	<sy:updatePeriod>
