--- a/feed/index.html
+++ b/feed/index.html
@@ -9,8 +9,8 @@
 
 <channel>
 	<title>Sajjad Raza</title>
-	<atom:link href="https://sajjadraza705.github.io/raza/feed/" rel="self" type="application/rss+xml" />
-	<link>http://sajjadraza705.github.io/raza/</link>
+	<atom:link href="https://sajjadraza786.netlify.app/feed/" rel="self" type="application/rss+xml" />
+	<link>http://sajjadraza786.netlify.app/</link>
 	<description>Just another WordPress site</description>
 	<lastBuildDate>Fri, 09 Oct 2020 13:35:28 +0000</lastBuildDate>
 	<language>en-US</language>
